# overlord

./: Cargo.toml
examples/: salon.rs
src/: codec.rs  error.rs  lib.rs  timer.rs  types.rs
src/smr/: smr_types.rs  state_machine.rs
src/state/: collection.rs  parallel.rs  process.rs
src/utils/: auth_manage.rs  rand_proposer.rs
src/wal/: wal_type.rs
tests/: test_utils.rs
tests/integration_tests/: primitive.rs  utils.rs  wal.rs
