[package]
name = "overlord"
version = "0.5.0"
authors = ["Eason Gao <kaoimin@qq.com>"]
edition = "2021"
license = "MIT"
include = ["src/*", "README.md", "LICENSE", "rust-toolchain"]
readme = "README.md"
keywords = ["consensus", "bft", "distributed-systems"]
categories = ["algorithms"]
repository = "https://github.com/cryptape/overlord"
description = """
Overlord consensus procotol.
"""

[dependencies]
alloy-rlp = { version = "0.3", features = ["derive"] }
async-trait = "0.1"
bcs = "0.1"
bit-vec = "0.8"
bytes = { version = "1.10", features = ["serde"] }
creep = "0.2"
derive_more = { version = "2.0", features = ["constructor", "display"] }
futures = { version = "0.3", features = [ "async-await" ] }
hummer = "0.2"
log = "0.4"
muta-apm = "0.1"
parking_lot = "0.12"
prime_tools = "0.3"
rand_core = "0.9"
rand_pcg = "0.9"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
blake2b_simd = "1.0"
crossbeam-channel = "0.5"
env_logger = "0.11"
hasher = { version = "0.1", features = ['hash-keccak'] }
lazy_static = "1.5"
lru-cache = "0.1"
rand = "0.9"
serde_json = "1.0"

[features]
default = []
random_leader = []
